force-app/main/default/objects/PO_Item_Stage__c/PO_Item_Stage__c.object-meta.xml
<CustomObject>
    <description>SOX object - This objects stores the PO line items which is send by Distibutor via EDI/ Glynt channel</description>
    <label>PO Item Stage</label>
    <nameField>
        <label>PO Item Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Item Stage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>