force-app/main/default/objects/PO_Item_Stage__c/fields/Asset_Ids_Description__c.field-meta.xml
<CustomField>
    <fullName>Asset_Ids_Description__c</fullName>
    <label>Asset Ids Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>