force-app/main/default/objects/PO_Item_Stage__c/fields/Buyer_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Part_Number__c</fullName>
    <label>Buyer Part Number</label>
    <type>TextArea</type>
</CustomField>