force-app/main/default/objects/PO_Item_Stage__c/fields/EDI_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>EDI_Line_Number__c</fullName>
    <label>EDI Line Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>