force-app/main/default/objects/PO_Item_Stage__c/fields/Item_Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Item_Subscription_Term__c</fullName>
    <label>Item Subscription Term</label>
    <length>50</length>
    <type>Text</type>
</CustomField>