force-app/main/default/objects/PO_Item_Stage__c/fields/Item_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Item_Unit_Price__c</fullName>
    <label>Item Unit Price</label>
    <length>50</length>
    <type>Text</type>
</CustomField>