force-app/main/default/objects/PO_Item_Stage__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>PO Item Stage</relationshipLabel>
    <relationshipName>PO_Item_Stage</relationshipName>
    <type>Lookup</type>
</CustomField>