force-app/main/default/objects/PO_Item_Stage__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>ProductCode</label>
    <type>TextArea</type>
</CustomField>