force-app/main/default/objects/PO_Item_Stage__c/fields/quantityPoItem__c.field-meta.xml
<CustomField>
    <fullName>quantityPoItem__c</fullName>
    <label>quantityPoItem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>