force-app/main/default/objects/PO_Item_Stage__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RWD-121</description>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>PO Item Stage</relationshipLabel>
    <relationshipName>PO_Item_Stage_del</relationshipName>
    <type>Lookup</type>
</CustomField>