force-app/main/default/objects/PO_Item_Stage__c/fields/QuoteLineId__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineId__c</fullName>
    <description>no longer used post polaris 2.0 , will be replaced by field Quote_Line__c</description>
    <label>(Deprecated)QuoteLineId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>