force-app/main/default/objects/PO_Item_Stage__c/fields/Stage_PO__c.field-meta.xml
<CustomField>
    <fullName>Stage_PO__c</fullName>
    <label>Stage PO</label>
    <referenceTo>PO_Stage__c</referenceTo>
    <relationshipLabel>PO Item Stage</relationshipLabel>
    <relationshipName>PO_Item_Stage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>