force-app/main/default/objects/PO_Item_Stage__c/fields/Standard_Carrier_Alpha_Code__c.field-meta.xml
<CustomField>
    <fullName>Standard_Carrier_Alpha_Code__c</fullName>
    <label>Standard Carrier Alpha Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>