force-app/main/default/objects/PO_Item_Stage__c/fields/Subscription_Term_Description__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term_Description__c</fullName>
    <label>Subscription Term Description</label>
    <type>TextArea</type>
</CustomField>