force-app/main/default/objects/PO_Item_Stage__c/fields/SubscriptionTerm__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionTerm__c</fullName>
    <label>SubscriptionTerm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>